# Email-Provenance

./: .gitignore
docs/Design/: main.d2
docs/Proposal/: Proposal.typ
lambda/: main.py  pyproject.toml
lambda/app/: __main__.py  handler.py  main.py  scrape.py
lambda/ekim/: handler.py  scrape.py  upload_selector.py
terraform/: main.tf
